sun.misc.base64 is removed in java 9+